config/k8s/exercise/deploy_v1/ingress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mdaw-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mdaw-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - mdaw-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            prefix: /assets
      route:
        - destination:
            host: frontend
            port:
              number: 5555
    - match:
        - uri:
            prefix: /core/
      rewrite:
        uri: /
      route:
        - destination:
            host: core
            port:
              number: 5550
    - match:
        - uri:
            prefix: /cart/
      rewrite:
        uri: /
      route:
        - destination:
            host: cart
            port:
              number: 5560
    - match:
        - uri:
            prefix: /payment/
      rewrite:
        uri: /
      route:
        - destination:
            host: payment
            port:
              number: 5570
